--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "env": {
-    "OPENAI_API_KEY": "@openai_api_key",
-    "WEATHER_API_KEY": "@weather_api_key"
-  }
+  "framework": "nextjs"
 }
-
